One z-index fix and re-add sound effects

--- a/style.css
+++ b/style.css
@@ -846,7 +846,7 @@ h6 {
   color:white;
   text-shadow: 0 0 5px #000;
   opacity: 0;
-  z-index:10;
+  z-index:5;
 }
 
 .explosion {
